fixed overflow bug

--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ body {
   flex-direction: column;
   justify-content: space-between;
   position: relative;
+  overflow: hidden;
 }
 
 .container {
